--- a/app/views/filters/show.html.erb
+++ b/app/views/filters/show.html.erb
@@ -1,19 +1,21 @@
 <div class="row">
-  <div class="small-8 small-centered columns">
-    <h1>Cases for filter</h1>
+  <div class="small-10 small-centered columns">
+    <h4>
+      Cases by filter: <strong><%= @filter.name %></strong>
+    </h4>
   </div>
 </div>
 
 <div class="row">
-  <div class="small-5 columns centered">
+  <div class="small-12 columns">
     <ul class="side-nav">
       <% @cases.each do |kase| %>
         <li>
           <a href="./cases/<%= kase.id %>">
             <%= kase.subject %>
           </a>
-          <%= kase.labels %>
         </li>
+        <%= kase.labels %>
       <% end %>
     </ul>
   </div>
