Displaying labels and filters as part of the layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,48 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/foundation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li class="name">
+        <h1>
+          <a href="<%= root_path %>">
+            <i class="fa fa-home"> Home</i>
+          </a>
+        </h1>
+      </li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+    </ul>
+  </nav
+  <div class="row">
+    <div class="small-2 columns">
+      <ul class="filters side-nav">
+        <li class="heading">Filters</li>
+        <% @filters.each do |filter| %>
+          <li>
+            <%= link_to filter.name, filter_path(filter.id) %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+    <div class="small-8 columns">
+      <%= yield %>
+    </div>
+    <div class="small-2 columns">
+      <ul class="filters side-nav">
+        <li class="heading">Labels</li>
+        <% @labels.each do |label| %>
+          <li>
+            <%= label.name %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
