--- a/app/views/filters/show.html.erb
+++ b/app/views/filters/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-10 small-centered columns">
+  <div class="small-10 columns">
     <h4>
       Cases by filter: <strong><%= @filter.name %></strong>
     </h4>
