--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -11,7 +11,7 @@
         </div>
         <br>
         <div class="labels">
-          Labels: <%= @kase.labels.join(', ') %>
+          <strong>Labels:</strong> <%= @kase.labels.join(', ') %>
         </div>
       </div>
     </div>
