--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,12 +18,18 @@
   font-size: 0.75rem;
 }
 
+.case{
+  .title{
+    font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+    color: #ffab40;
+    font-size: 1.4rem;
+  }
+}
+
 .card {
-  font-family: 'Roboto', sans-serif;
-  overflow: hidden;
-  color: #373737;
   border: 1px #CCC solid;
-  padding: 21px 5px 5px 5px;
+  padding: 10px 5px 20px 5px;
   margin: 10px 10px;
   border-radius: 2px;
   .title {
@@ -52,18 +58,5 @@
     transition: color 0.3s ease;
     text-transform: uppercase;
     text-decoration: none;
-  }
-  .image {
-    position: relative;
-    .title {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 1.3rem;
-      color: #fff;
-    }
-    img {
-      border-radius: 2px 2px 0 0;
-    }
   }
 }
