Adding flash notice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="enridesk">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
@@ -26,7 +26,14 @@
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
     <hr>
-  </nav
+  </nav>
+  <% if flash[:notice] %>
+    <div class="row">
+      <div data-alert class="alert-box success radius">
+        <%= flash[:notice] %>
+      </div>
+    </div>
+  <% end %>
   <div class="row">
     <div class="small-10 medium-2 large-2 columns">
       <ul class="filters side-nav">
@@ -37,13 +44,12 @@
           </li>
         <% end %>
       </ul>
-      <hr>
     </div>
     <div class="small-10 medium-8 large-8 columns">
       <%= yield %>
     </div>
     <div class="small-10 medium-2 large-2 columns">
-      <ul class="filters side-nav">
+      <ul class="side-nav">
         <li class="heading">Labels</li>
         <% @labels.each do |label| %>
           <li>
