--- a/app/views/labels/_short_list.html.erb
+++ b/app/views/labels/_short_list.html.erb
@@ -1,3 +1,8 @@
 <div class="labels">
-  <strong> Labels: </strong> <%= local_labels.join(', ') %>
+  <strong> Labels: </strong>
+  <% local_labels.each do |single_label| %>
+    <span class="label">
+      <%= single_label %>
+    </span>
+  <% end %>
 </div>
