More style changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="small-8 small-centered columns">
     <h1>Welcome!</h1>
-    <h4>Please select a filter to look into specific cases</h4>
+    <h5>You can add a new label on the right <i class="fa fa-2x fa-long-arrow-right"></i></h4>
+    <br>
+    <br>
+    <h5>
+      <i class="fa fa-2x fa-long-arrow-left"></i> Click on a filter to list cases with their labels
+    </h4>
   </div>
 </div>
