--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     </div>
     <div class="small-10 medium-2 large-2 columns">
       <ul class="side-nav">
-        <li class="heading">Labels</li>
+        <li class="heading">Available Labels</li>
         <% @labels.each do |label| %>
           <li>
             <%= label.name %>
